[package]
description = "Cartesi Creepts Game"
homepage = "https://cartesi.io"
name = "creepts_dapp"
version = "0.1.0"
authors = ["Cartesi Team"]

[dependencies]
log = "0.4"
env_logger = "0.6.0"
tournament = { path = "../tournament-dlib/tournament" }
error = { path = "../tournament-dlib/arbitration-dlib/dispatcher/error" }
transaction = { path = "../tournament-dlib/arbitration-dlib/dispatcher/transaction" }
configuration = { path = "../tournament-dlib/arbitration-dlib/dispatcher/configuration" }
utils = { path = "../tournament-dlib/arbitration-dlib/dispatcher/utils" }
ethereum-types = "0.4"
ethabi = "6.1.0"
serde_json = "1.0"
serde = "1.0.0"
serde_derive = "1.0.0"
state = { path = "../tournament-dlib/arbitration-dlib/dispatcher/state" }
dispatcher = { path = "../tournament-dlib/arbitration-dlib/dispatcher/dispatcher" }
grpc = { git = "https://github.com/cartesi/grpc-rust", branch = "make_marshall_public" }
protobuf = "=2.8.1"
bytes = "0.4.12"
